force-app/main/default/objects/Bin_Location__c/Bin_Location__c.object-meta.xml
<CustomObject>
    <label>Bin Location</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bin Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>