force-app/main/default/objects/Bin_Location__c/fields/Aisle__c.field-meta.xml
<CustomField>
    <fullName>Aisle__c</fullName>
    <label>Aisle</label>
    <length>20</length>
    <type>Text</type>
</CustomField>