force-app/main/default/objects/Bin_Location__c/fields/Bin_Code__c.field-meta.xml
<CustomField>
    <fullName>Bin_Code__c</fullName>
    <externalId>true</externalId>
    <label>Bin Code</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>