force-app/main/default/objects/Bin_Location__c/fields/Bin_Type__c.field-meta.xml
<CustomField>
    <fullName>Bin_Type__c</fullName>
    <label>Bin Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Receiving</fullName>
            </value>
            <value>
                <fullName>Staging</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
                <default>true</default>
                <label>Storage</label>
            </value>
            <value>
                <fullName>Picking</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>