force-app/main/default/objects/Bin_Location__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Bin Locations</relationshipLabel>
    <relationshipName>Bin_Locations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>